Fixed the read more on mobile and updated JMTA img

--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -744,7 +744,7 @@ display: none;
 }
 
 .ethics-guidelines {
-	padding: 1em;
+	padding: 1em 1em 2em;
 }
 
 .ethics-guidelines .body-1 {
